fix second burger menu z-index

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1153,7 +1153,7 @@ table th {
 .sidebarButton {
     position: relative;
     margin: 8px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .mobileSidebarWrapper {
